5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1635_2445.log
== TEST (2019-04-11 13:56:08) 
-- CODE:
t = float(input("temp em celsius C / F:"))
vt = float(input("valor da temp:"))
if (t == F):
	vt = 5 / 9 * (F - 32)
else:
	vt / 5 = (C - 32) / 9
print(round(vt , 2))
-- ERROR:
File "XXXX", line 6
    vt / 5 = (C - 32) / 9
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:56:40) 
-- CODE:
t = float(input("temp em celsius C / F:"))
vt = float(input("valor da temp:"))
if (t == F):
	vt = 5 / 9 * (t - 32)
else:
	vt / 5 = (t- 32) / 9
print(round(vt , 2))
-- ERROR:
File "XXXX", line 6
    vt / 5 = (t- 32) / 9
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:58:07) 
-- CODE:
t = float(input("temp em celsius C / F:"))
vt = float(input("valor da temp:"))
if (t == F):
	vt = 5 / 9 * (t - 32)
else:
	vt / 5 =(t -32) / 9
print(round(vt , 2))
-- ERROR:
File "XXXX", line 6
    vt / 5 =(t -32) / 9
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 13:58:10) 
-- CODE:
t = float(input("temp em celsius C / F:"))
vt = float(input("valor da temp:"))
if (t == F):
	vt = 5 / 9 * (t - 32)
else:
	vt / 5 =(t -32) / 9
print(round(vt , 2))
-- EXECUTION TIME:
0.197332
-- ERROR:
  File "/home/codebench/codes/1635/2445/main.py", line 6
    vt / 5 =(t -32) / 9
    ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 13:58:10) 
-- CODE:
t = float(input("temp em celsius C / F:"))
vt = float(input("valor da temp:"))
if (t == F):
	vt = 5 / 9 * (t - 32)
else:
	vt / 5 =(t -32) / 9
print(round(vt , 2))
-- EXECUTION TIME:
0.281382
-- ERROR:
  File "/home/codebench/codes/1635/2445/main.py", line 6
    vt / 5 =(t -32) / 9
    ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:59:26) 
-- CODE:
t = float(input("temp em celsius C / F:"))
vt = float(input("valor da temp:"))
if (t == F):
	vt = 5 / 9 * (t - 32)
else:
	vt = ((t - 32) / 9)*5
print(round(vt , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    t = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:59:53) 
-- CODE:
t = input("temp em celsius C / F:")
vt = float(input("valor da temp:"))
if (t == F):
	vt = 5 / 9 * (t - 32)
else:
	vt = ((t - 32) / 9)*5
print(round(vt , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (t == F):
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 14:00:21) 
-- CODE:
t = input("temp em celsius C / F:")
vt = float(input("valor da temp:"))
if (t == "F":
	vt = 5 / 9 * (t - 32)
else:
	vt = ((t - 32) / 9)*5
print(round(vt , 2))
-- ERROR:
File "XXXX", line 3
    if (t == "F":
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 14:00:36) 
-- CODE:
t = input("temp em celsius C / F:")
vt = float(input("valor da temp:"))
if (t == "F"):
	vt = 5 / 9 * (t - 32)
else:
	vt = ((t - 32) / 9)*5
print(round(vt , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vt = ((t - 32) / 9)*5
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 14:01:33) 
-- CODE:
t = input("temp em celsius C / F:")
vt = float(input("valor da temp:"))
if (t == "F"):
	tf 5 / 9 * (vt 32)
else:
	tf ((vt 32) / 9)*5
print(round(tf, 2))
-- ERROR:
File "XXXX", line 4
    tf 5 / 9 * (vt 32)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 14:01:49) 
-- CODE:
t = input("temp em celsius C / F:")
vt = float(input("valor da temp:"))
if (t == "F"):
	tf=5 / 9 * (vt 32)
else:
	tf=(vt 32) / 9)*5
print(round(tf, 2))
-- ERROR:
File "XXXX", line 4
    tf=5 / 9 * (vt 32)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 14:02:46) 
-- CODE:
t = input("temp em celsius C / F:")
vt = float(input("valor da temp:"))
if (t == "F"):
	tf= 5/9 * (vt*2)
else:
	tf=(vt*2) / 9)*5
print(round(tf, 2))
-- ERROR:
File "XXXX", line 6
    tf=(vt*2) / 9)*5
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 14:04:42) 
-- CODE:
t = input("temp em celsius C / F:")
vt = float(input("valor da temp:"))
if (t == "F"):
	tf= 5/9 * (vt-32)
else:
	tf=((t - 32) - 9) * 5
print(round(tf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    tf=((t - 32) - 9) * 5
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 14:05:16) 
-- CODE:
t = input("temp em celsius C / F:")
vt = float(input("valor da temp:"))
if (t == "F"):
	tf= 5/9 * (vt-32)
else:
	tf=((t -32) -9) * 5
print(round(tf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    tf=((t -32) -9) * 5
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 14:06:05) 
-- CODE:
t = input("temp em celsius C / F:")
vt = float(input("valor da temp:"))
if (t == "F"):
	tf= 5/9 * (vt-32)
else:
	tf=((t -32)/9)*5
print(round(tf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    tf=((t -32)/9)*5
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 14:11:33) 
-- CODE:
t = float(input("temp em celsius C / F:"))
vt = float(input("valor da temp:"))
if (t == "F"):
	v = 5 / 9 * (vt- 32)
else:
	v = (vt *(9 / 5)) + 32
print(round(v , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    t = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 14:11:58) 
-- CODE:
t = input("temp em celsius C / F:")
vt = float(input("valor da temp:"))
if (t == "F"):
	v = 5 / 9 * (vt- 32)
else:
	v = (vt *(9 / 5)) + 32
print(round(v , 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 14:12:14) 
-- CODE:
t = input("temp em celsius C / F:")
vt = float(input("valor da temp:"))
if (t == "F"):
	v = 5 / 9 * (vt- 32)
else:
	v = (vt *(9 / 5)) + 32
print(round(v , 2))
-- EXECUTION TIME:
0.181863
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
